<resources>
    <string name="app_name">Laboratorio07</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyCWRgj_rbuGNaLKvzwlAvLqOlIkWlerm1c</string>
    <string name="describa_el_reclamo">Describa el reclamo</string>
    <string name="telefono_de_contacto">Teléfono de contacto</string>
    <string name="mail_de_contacto">Mail de contacto</string>
    <string name="btn_reclamar">Reclamar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="distancia_maxima">Distancia máxima</string>
    <string name="btn_agregar_foto">Agregar Foto</string>
</resources>
