<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:style="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_alta_reclamo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin_without_padding"
    android:paddingRight="@dimen/horizontal_margin_without_padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lfmoretti.laboratorio07.AltaReclamoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_descripcion"
                android:text="@string/describa_el_reclamo" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_descripcion" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_telefono"
                android:text="@string/telefono_de_contacto" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/et_telefono" />

            <TextView
                android:text="@string/mail_de_contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/btn_reclamar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_reclamar"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/btn_cancelar"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancelar"
                    android:layout_weight="1"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style:srcCompat="@android:drawable/ic_menu_camera"
                    android:id="@+id/btn_agregar_foto"
                    android:layout_weight="1" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imv_imagen_reclamo"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
